
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
struct sockaddr {int dummy; } ;


 int addr_size ;
 int debug ;
 int printf (char*,...) ;
 int sendto (int ,void*,size_t,int ,struct sockaddr*,int ) ;
 int serverAddr ;
 int sockfd ;

int
sendpkt(
 void * xdata,
 size_t xdatalen
 )
{
 if (debug >= 3)
  printf("Sending %lu octets\n", (u_long)xdatalen);

        sendto(sockfd,xdata,(size_t)xdatalen, 0,(struct sockaddr *)&serverAddr,addr_size);


 if (debug >= 4) {
  int first = 8;
  char *cdata = xdata;

  printf("Packet data:\n");
  while (xdatalen-- > 0) {
   if (first-- == 0) {
    printf("\n");
    first = 7;
   }
   printf(" %02x", *cdata++ & 0xff);
  }
  printf("\n");
 }
 return 0;
}
